GNOME Bugzilla – Bug 754540
a few cogl fix ups
Last modified: 2015-09-03 21:29:58 UTC
These are the patches from bug 753531 that should still go in I think.
Created attachment 310616 [details] [review] kms-winsys: use correct surface format gbm confusingly has two different format types, and cogl is using the wrong one in some of its calls to gbm_surface_create This commit fixes the calls that are wrong.
Created attachment 310617 [details] [review] kms-winsys: clean up error handling in _cogl_winsys_renderer_connect If cogl fails to open the drm device, initialize gbm, or open the egl display, then it closes the drm fd, uninitializes gbm, closes the display and then calls _cogl_winsys_renderer_disconnect which does most of those things again, on the, now deinitialized, members. This commit removes the explicit failure handling in renderer_connect and defers cleanup to disconnect.
Created attachment 310618 [details] [review] kms-winsys: don't disable page flipping on EACCES If the user switches VTs in the middle of a page flip, the page flip operation may fail with EACCES. page flipping will work next time the VT becomes active, so we shouldn't disable page flipping in that case.
Review of attachment 310617 [details] [review]: Looks good.
Review of attachment 310616 [details] [review]: Looks good.
Review of attachment 310618 [details] [review]: Okay.
Attachment 310616 [details] pushed as 181176b - kms-winsys: use correct surface format Attachment 310617 [details] pushed as 78c44ab - kms-winsys: clean up error handling in _cogl_winsys_renderer_connect Attachment 310618 [details] pushed as 6bd49c3 - kms-winsys: don't disable page flipping on EACCES